--- a/rest-api/.env-example
+++ b/rest-api/.env-example
@@ -1,6 +1,6 @@
-COORS=
-CLIENT_ID=
-CLIENT_SECRET=
-REDIRECT_URI=
-CODE_SIZE=
+CORS=http://127.0.0.1:8081
+CLIENT_ID=ahdfh-example-3jhjhssa
+CLIENT_SECRET=ajdsf-example-fj2lfhquh2iu3rh1jhds
+REDIRECT_URI=http://127.0.0.1:8081/app.html
+CODE_SIZE=6
 
