--- a/rest-api/.env-example
+++ b/rest-api/.env-example
@@ -1,3 +1,4 @@
+ADDRESS=127.0.0.1:8080
 CORS=http://127.0.0.1:8081
 CLIENT_ID=ahdfh-example-3jhjhssa
 CLIENT_SECRET=ajdsf-example-fj2lfhquh2iu3rh1jhds
