--- a/.env-example
+++ b/.env-example
@@ -2,6 +2,6 @@ ADDRESS=127.0.0.1:8080
 CORS=http://127.0.0.1:8081
 CLIENT_ID=ahdfh-example-3jhjhssa
 CLIENT_SECRET=ajdsf-example-fj2lfhquh2iu3rh1jhds
-REDIRECT_URI=http://127.0.0.1:8081/app.html
+REDIRECT_URI=http://127.0.0.1:8081
 CODE_SIZE=6
 
